Fixed weather box wrapping issue on mobile pages

--- a/css/weather.css
+++ b/css/weather.css
@@ -23,6 +23,7 @@ it should include this file
   height: 100%;
   font-weight: bold;
   align-items: stretch;
+  flex-wrap: wrap;
 }
 
 .weatherBox.mobile{
